code smell fix